WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146476
WKWebView snapshots have the wrong scale after rotation
https://bugs.webkit.org/show_bug.cgi?id=146476
Summary
WKWebView snapshots have the wrong scale after rotation
Tim Horton
Reported
2015-06-30 15:22:00 PDT
WKWebView snapshots have the wrong scale after rotation
Attachments
Patch
(9.97 KB, patch)
2015-06-30 15:22 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(5.62 KB, patch)
2015-07-01 11:43 PDT
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-06-30 15:22:26 PDT
Created
attachment 255865
[details]
Patch
Tim Horton
Comment 2
2015-06-30 15:23:36 PDT
There are still a lot of weird edge cases with the snapshotting timing, so I'm going to look into having the software snapshot case go through the remote layer tree commit mechanism so that we always get the "right" answer, but if that doesn't work out this patch fixes one of the many bugs.
Tim Horton
Comment 3
2015-07-01 11:43:15 PDT
Created
attachment 255938
[details]
Patch
WebKit Commit Bot
Comment 4
2015-07-01 11:45:56 PDT
Attachment 255938
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:216: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 5
2015-07-01 14:36:13 PDT
http://trac.webkit.org/changeset/186194
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug